# football-manager

./: .gitignore  Cargo.toml  README_AI_SETUP.md  flake.nix  package-lock.json  package.json  playerscheme.json  test_platform_detection.rs  test_screenshot.rs  test_windows_screenshot.rs  vite.config.ts
.direnv/: flake-profile-2-link  flake-profile-3-link
.trae/rules/: heroui.md  project_rules.md
db/: main.db
migrations/: 001_initial_schema.sql
scripts/: README.md  create-migration.ts  migrate.ts
src/: App-modern.css  App.tsx  index.css  main.tsx  router.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ImageAnalyzer.css  ImageAnalyzer.tsx  Navigation.tsx
src/lib/: ai-config.ts  db.ts  player-ai-service.ts
src/pages/: Home.tsx  KeyMonitor.tsx  Players.tsx  ScreenshotAI.tsx
